# solar-tracker

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  auth.py  db.py  docker-compose.yml  ha_client.py  i18n.py  metrics.py  pyproject.toml  requirements.lock.txt  requirements.txt  seed_demo.py  solarweb_client.py  telemetry.py
.github/workflows/: ci.yml  docker.yml
assets/: logo_bright.pxd  logo_dark.pxd
docs/: 404.html  COOKBOOK.md  index.html  llms.txt  manifest.webmanifest  robots.txt  sitemap.xml  style.css
mcp_server/: README.md  pyproject.toml
mcp_server/src/solar_tracker_mcp/: __init__.py  __main__.py  client.py  server.py
scripts/: deploy.sh  manage_users.py  release.sh  sync_solarweb.py
static/css/: style.css
static/js/: app.js  changelog.js  charts.js  dateinput.js  settings.js  theme.js  toast.js
templates/: base.html  dashboard.html  entry.html  login.html  settings.html
tests/: test_auth.py  test_metrics.py  test_solarweb_client.py
translations/: de.json  en.json  es.json  fr.json  it.json
