[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-tracker-mcp"
version = "2.3.3"
description = "MCP server for Solar-Tracker - lets LLMs read and write all Solar-Tracker data via tools and prompts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Solar-Tracker contributors" }]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
solar-tracker-mcp = "solar_tracker_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
solar_tracker_mcp = ["py.typed"]
